# cmake-template

./: CMakeLists.txt
.cache/clangd/index/: LinkedList.h.2135A63ACDDA6411.idx  main.cpp.A1F8646FA94A9AD2.idx
cmake/: globber.cmake
src/: main.cpp
src/common/: BaseClassThread.h  EthernetInterface.h  LinkedList.h  Memory.h
test/: UDPTests.cpp
